--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <h2>Login</h2>
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-
+        <input type="confirm password"placeholder="confirme password">
+        <input type="email"placeholder="email">
         <div class="remember">
-            <input type="checkbox"> Remember me
+            <input type="checkbox"> save
         </div>
 
         <button>Login</button>
+        <button>create un account</button>
         <a href="#">Forgot Password?</a>
     </div>
 </body>
